--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@noble/ed25519": "^1.6.0",
     "@types/semver": "^7.3.9",
+    "async-mutex": "^0.4.0",
     "fast-sha256": "^1.3.0",
     "is-valid-hostname": "^1.0.2",
     "json-canonicalize": "^1.0.4",
